--- a/index.html
+++ b/index.html
@@ -9,6 +9,96 @@
     <title>Panda - Grab your things!</title>
 </head>
 <body>
+    <!-- hader/top section -->
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Shoes</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Backpack</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Subscribe</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <section class="my-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active p-5 bg-info bg-gradient rounded">
+                  <div class="row align-items-center">
+                    <div class="col-lg-7">
+                        <h1>Cool Dude Headphone</h1>
+                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world!</p>
+                        <h1>$420</h1>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                      <div class="col-lg-5">
+                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+                </div>
+                <div class="carousel-item p-5 bg-info bg-gradient rounded">
+                  <div class="row align-items-center">
+                    <div class="col-lg-7">
+                        <h1>Mega LCD TV for Sports</h1>
+                        <p>This is the best Tele Vision in the world for people who just want to waste time in front of TV!</p>
+                        <h1>$1220</h1>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                      <div class="col-lg-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+                </div>
+                <div class="carousel-item p-5 bg-info bg-gradient rounded">
+                  <div class="row align-items-center">
+                    <div class="col-lg-7">
+                        <h1>X-Box for your Living Room</h1>
+                        <p>This is the best x-box in the world for people who just want to waste time in front of fake sports!</p>
+                        <h1>$600</h1>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                      <div class="col-lg-5">
+                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </section>
+    </header>
+
+    <!-- mid/main body section -->
+    <main>
+
+    </main>
+
+    <!-- footer/bottom section -->
+    <footer>
+
+    </footer>
     
     <!-- bootstrap script cdn link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
