--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpacks">Backpack</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -92,12 +92,137 @@
 
     <!-- mid/main body section -->
     <main>
+      <!-- Categories -->
+      <section class="container my-4">
+          <div class="row g-4">
+            <div class="col-lg-4 col-12">
+              <div class="bg-warning d-flex align-items-center justify-content-between rounded-3 px-3">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-12">
+              <div class="bg-success d-flex align-items-center justify-content-between rounded-3 px-3">
+                <h1 class="text-white">Bag</h1>
+                <img src="images/categories/bag.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-12">
+              <div class="bg-primary d-flex align-items-center justify-content-between rounded-3 px-3">
+                <h1 class="text-white">Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+          </div>
+      </section>
 
+      <!-- cards -->
+      <!-- shoes section -->
+      <section class="container my-5" id="shoes">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Supply 350</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h4>$250</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Nike 360</h4>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h4>$200</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Red Airmax</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h4>$320</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Backpack's section -->
+      <section class="container my-5" id="backpacks">
+        <h2>Backpacks</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">OGIO Red Premium</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h4>$120</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">BURTON Blue Version</h4>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h4>$220</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Black CAT</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h4>$169</h4>
+              </div>
+              <div class="">
+                <button class="btn btn-warning m-3">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- subscribibe section -->
+      <section style="height: 350px;" class="container my-5 bg-info rounded-3 d-flex justify-content-center align-items-center" id="subscribe">
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <p>Get updates on sale, special and more...</p>
+          <input type="text" placeholder="put your e-mail here">
+          <br>
+          <button class="btn btn-warning">SUBMIT</button>
+        </div>
+      </section>
     </main>
 
     <!-- footer/bottom section -->
-    <footer>
-
+    <footer class="text-center">
+      <p><small>©2021. Panda Commerce. All right reserved. Sofia, Bulgaria</small></p>
     </footer>
     
     <!-- bootstrap script cdn link -->
