code updated and add some css for custom style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custome styles -->
+    <link rel="stylesheet" href="css/styles.css">
     <title>Panda - Grab your things!</title>
+
 </head>
 <body>
     <!-- hader/top section -->
@@ -38,39 +41,39 @@
           <section class="my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active p-5 bg-info bg-gradient rounded">
+                <div class="carousel-item active p-5 panda-bg bg-gradient rounded">
                   <div class="row align-items-center">
                     <div class="col-lg-7">
                         <h1>Cool Dude Headphone</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world!</p>
                         <h1>$420</h1>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <button class="btn panda-btn">Buy Now</button>
                     </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                       </div>
                   </div>
                 </div>
-                <div class="carousel-item p-5 bg-info bg-gradient rounded">
+                <div class="carousel-item p-5 panda-bg bg-gradient rounded">
                   <div class="row align-items-center">
                     <div class="col-lg-7">
                         <h1>Mega LCD TV for Sports</h1>
                         <p>This is the best Tele Vision in the world for people who just want to waste time in front of TV!</p>
                         <h1>$1220</h1>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <button class="btn panda-btn">Buy Now</button>
                     </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                       </div>
                   </div>
                 </div>
-                <div class="carousel-item p-5 bg-info bg-gradient rounded">
+                <div class="carousel-item p-5 panda-bg bg-gradient rounded">
                   <div class="row align-items-center">
                     <div class="col-lg-7">
                         <h1>X-Box for your Living Room</h1>
                         <p>This is the best x-box in the world for people who just want to waste time in front of fake sports!</p>
                         <h1>$600</h1>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <button class="btn panda-btn">Buy Now</button>
                     </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -93,7 +96,7 @@
     <!-- mid/main body section -->
     <main>
       <!-- Categories -->
-      <section class="container my-4">
+      <section class="container my-4 catagories">
           <div class="row g-4">
             <div class="col-lg-4 col-12">
               <div class="bg-warning d-flex align-items-center justify-content-between rounded-3 px-3">
@@ -130,7 +133,7 @@
                 <h4>$250</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -143,7 +146,7 @@
                 <h4>$200</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -156,7 +159,7 @@
                 <h4>$320</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -175,7 +178,7 @@
                 <h4>$120</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -188,7 +191,7 @@
                 <h4>$220</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -201,7 +204,7 @@
                 <h4>$169</h4>
               </div>
               <div class="">
-                <button class="btn btn-warning m-3">Buy Now >></button>
+                <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -209,13 +212,13 @@
       </section>
 
       <!-- subscribibe section -->
-      <section style="height: 350px;" class="container my-5 bg-info rounded-3 d-flex justify-content-center align-items-center" id="subscribe">
+      <section style="height: 350px;" class="container my-5 panda-bg rounded-3 d-flex justify-content-center align-items-center" id="subscribe">
         <div>
-          <h1>LET'S STAY IN TOUCH</h1>
+          <h3>LET'S STAY IN TOUCH</h3>
           <p>Get updates on sale, special and more...</p>
-          <input type="text" placeholder="put your e-mail here">
+          <input class="form-control" type="text" placeholder="put your e-mail here">
           <br>
-          <button class="btn btn-warning">SUBMIT</button>
+          <button class="btn panda-btn">SUBMIT</button>
         </div>
       </section>
     </main>
