code updated final

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- hader/top section -->
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -129,10 +129,10 @@
               <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h4 class="card-title">Supply 350</h4>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. lorem</p>
                 <h4>$250</h4>
               </div>
-              <div class="">
+              <div>
                 <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
@@ -145,7 +145,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 <h4>$200</h4>
               </div>
-              <div class="">
+              <div>
                 <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
@@ -158,8 +158,8 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 <h4>$320</h4>
               </div>
-              <div class="">
-                <button class="btn panda-btn m-3">Buy Now >></button>
+              <div>
+                <button class="panda-btn m-3">Buy Now >></button>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <h4>$120</h4>
               </div>
-              <div class="">
+              <div>
                 <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
@@ -190,7 +190,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 <h4>$220</h4>
               </div>
-              <div class="">
+              <div>
                 <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
@@ -203,7 +203,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 <h4>$169</h4>
               </div>
-              <div class="">
+              <div>
                 <button class="btn panda-btn m-3">Buy Now >></button>
               </div>
             </div>
@@ -216,7 +216,7 @@
         <div>
           <h3>LET'S STAY IN TOUCH</h3>
           <p>Get updates on sale, special and more...</p>
-          <input class="form-control" type="text" placeholder="put your e-mail here">
+          <input class="form-control" type="text" placeholder="Your e-mail here">
           <br>
           <button class="btn panda-btn">SUBMIT</button>
         </div>
